--- a/my-react-lab/src/components/app.css
+++ b/my-react-lab/src/components/app.css
@@ -1,11 +1,16 @@
-body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI',
-    'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
-    'Droid Sans', 'Helvetica Neue', sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    }
-    * {
-    box-sizing: border-box;
-    }
+.header{
+    background-color: rgb(212, 134, 17);
+    padding: 10;
+}
+.greeting{
+    background-color: aqua;
+    padding: 15;
+}
+.Content{
+    background-color: rgb(99, 158, 93);
+    padding: 13;
+}
+.footer{
+    background-color:ghostwhite;
+    padding: 14;
+}
